--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
 before_install:
 - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
   -in deploy-key.enc -out deploy-key -d
+-eval `ssh-agent -s`
 - ssh-add deploy-key
 - sudo add-apt-repository ppa:nginx/latest
 - sudo apt-get update
