--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 addons:
-  ssh_known_hosts: "$HOSTNAME_SRV1"
+  ssh_known_hosts: $HOSTNAME_SRV1
 before_install:
 - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
   -in deploy-key.enc -out deploy-key -d
