--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 addons:
   ssh_known_hosts: "$HOSTNAME_SRV1"
 before_install:
-- sudo add-apt-repository ppa:nginx/stable
+- sudo add-apt-repository -y ppa:nginx/stable
 - sudo apt-get update
 - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
   -in deploy-key.enc -out deploy-key -d
