--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 - ssh-add deploy-key
 install:
 - sudo apt-get -qq -y install nginx
-- sudo gem install jekyll
+- gem install jekyll
 script:
 - jekyll clean && jekyll build
 - rm -r /var/www/html/*
