--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ language: ruby
 rvm:
 - 2.1
 sudo: required
-addons:
-  ssh_known_hosts: "$HOSTNAME_SRV1"
 before_install:
+- ssh-keyscan -H $HOSTNAME_SRV1 >> ~/.ssh/known_hosts
 - sudo add-apt-repository -y ppa:nginx/stable
 - sudo apt-get update
 - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
