--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.1
 sudo: required
 before_install:
-- ssh-keyscan -H $HOSTNAME_SRV1 >> ~/.ssh/known_hosts
+- ssh-keyscan -H $HOSTNAME_SRV1 2>&1 | sort -u - ~/.ssh/known_hosts > ~/.ssh/tmp_hosts && mv ~/.ssh/tmp_hosts ~/.ssh/known_hosts
 - sudo add-apt-repository -y ppa:nginx/stable
 - sudo apt-get update
 - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
