--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 - jekyll clean && jekyll build
 - bash _scripts/deploy.sh
 after_success:
-  - slack_message.sh repositories deployed on server $SERVERS from commit $TRAVIS_COMMIT of $TRAVIS_REPO_SLUG@$TRAVIS_BRANCH 
+  - slack_message.sh -t "Website deployed" -b "on server $SERVERS from commit $TRAVIS_COMMIT of $TRAVIS_REPO_SLUG@$TRAVIS_BRANCH " -c "repositories" -u "$SLACK_WEBHOOK_URL"
 branches:
   only:
   - master
