--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 - 2.1
 sudo: required
 before_install:
-ì- bash _scripts/ssh_autenticity.sh
+- bash _scripts/ssh_autenticity.sh
 - sudo add-apt-repository -y ppa:nginx/stable
 - sudo apt-get update
 - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
