--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,12 @@ rvm:
 - 2.1
 sudo: required
 before_install:
-- openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
-  -in cloudflare_fermiumlabs_com-key.pem.enc -out _configs/certificates/cloudflare_fermiumlabs_com-key.pem
-  -d
-- openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
-  -in cloudflare_fermiumlabs_com.pem.enc -out _configs/certificates/cloudflare_fermiumlabs_com.pem
-  -d
-- openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
-  -in deploy-key.enc -out deploy-key -d
+- cd _configs/certificates/
+- openssl aes-256-cbc -K $encrypted_ece91c64eeef_key -iv $encrypted_ece91c64eeef_iv
+  -in cloudflare_fermiumlabs_com.pem.enc -out ./cloudflare_fermiumlabs_com.pem -d
+- openssl aes-256-cbc -K $encrypted_ece91c64eeef_key
+  -iv $encrypted_ece91c64eeef_iv -in cloudflare_fermiumlabs_com-key.pem.enc -out cloudflare_fermiumlabs_com-key.pem -d
+- cd $TRAVIS_BUILD_DIR
 - bash _scripts/ssh_autenticity.sh
 - sudo add-apt-repository -y ppa:nginx/stable
 - sudo apt-get update
