--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ rvm:
 - 2.1
 sudo: required
 before_install:
+- - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
+  -in deploy-key.enc -out deploy-key -d
+- chmod 600 deploy-key && ssh-add deploy-key && rm deploy-key.enc && rm deploy-key
 - bash _scripts/ssh_autenticity.sh
 - sudo add-apt-repository -y ppa:nginx/stable
 - sudo apt-get update
 - eval `ssh-agent -s`
-- chmod 600 deploy-key && ssh-add deploy-key && rm deploy-key.enc && rm deploy-key
 - sudo cp _scripts/slack_message.sh /usr/local/bin/ && sudo chmod +x /usr/local/bin/slack_message.sh
 install:
 - sudo apt-get -qq -y install nginx
