--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   -in deploy-key.enc -out deploy-key -d
 - eval `ssh-agent -s`
 - chmod 600 deploy-key && ssh-add deploy-key && rm deploy-key.enc && rm deploy-key
-- sudo add-apt-repository -y ppa:nginx/stable
+- sudo add-apt-repository -y ppa:nginx/development
 - sudo apt-get -qq -y install nginx
 - sudo apt-get update
 - bash _scripts/ssh_autenticity.sh
