--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,20 @@ language: ruby
 rvm:
 - 2.1
 sudo: required
+
 before_install:
 - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
   -in deploy-key.enc -out deploy-key -d
 - eval `ssh-agent -s`
 - chmod 600 deploy-key && ssh-add deploy-key && rm deploy-key.enc && rm deploy-key
-- sudo add-apt-repository -y ppa:nginx/development 
-- sudo apt-get -qq -y install nginx 
-- sudo apt-get update
 - bash _scripts/ssh_autenticity.sh #add servers to known hosts
 - sudo cp _scripts/slack_message.sh /usr/local/bin/ && sudo chmod +x /usr/local/bin/slack_message.sh #install slack notifier script
+- sudo add-apt-repository -y ppa:nginx/development 
+- sudo apt-get update
+- sudo apt-get -qq -y install nginx 
+
+install:
+- sh -c "cd Websites/website && bundle install --jobs=3 --retry=3 --deployment"
 
 script:
 - sh -c "cd Websites/website && bundle exec jekyll build" #build first site withouth dir change
