--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
   -in deploy-key.enc -out deploy-key -d
 - eval `ssh-agent -s`
-- chmod 600 deploy-key && ssh-add deploy-key && rm deploy-key.enc && rm deploy-key
+- chmod 600 deploy-key && ssh-add deploy-key && rm deploy-key
 - bash _scripts/ssh_autenticity.sh #add servers to known hosts
 - sudo cp _scripts/slack_message.sh /usr/local/bin/ && sudo chmod +x /usr/local/bin/slack_message.sh #install slack notifier script
 - sudo add-apt-repository -y ppa:nginx/development 
