--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
 
 script:
 - sh -c "cd Websites/website && bundle exec jekyll build" #build first site withouth dir change
+- bash _scripts/tests/nginx/nginx.sh
 - bash _scripts/tests/html/htmlproofer.sh
 
 after_success:
