--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 - sudo apt-get -qq -y install nginx 
 
 script:
-- sh -c "cd Websites/website && bundle exec jekyll build" #build first site withouth dir change
+- sh -c "cd Websites/fermiulabs_com && bundle exec jekyll build" #build fermiumlabs.com withouth dir change
 - bash _scripts/tests/nginx/nginx.sh
 - bash _scripts/tests/html/htmlproofer.sh
 
