--- a/Websites/fermiumlabs_com/_config.yml
+++ b/Websites/fermiumlabs_com/_config.yml
@@ -18,3 +18,11 @@ twitter_username: jekyllrb
 github_username:  jekyll
 # Build settings
 markdown: kramdown
+
+exclude: ["_app",
+          "Gemfile",
+          "Gemfile.lock",
+          "gulpfile.js",
+          "node_modules",
+          "package.json"] # Don't forget that Jekyll automatically 
+                          # excludes files with a dot prefix
