--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,11 @@ before_install:
 - sudo apt-get update
 - sudo apt-get -qq -y install nginx 
 
+install:
+- sh -c "cd Websites/fermiumlabs_com && npm install"
+
 script:
+
 - sh -c "cd Websites/fermiumlabs_com && bundle exec jekyll build" #build fermiumlabs.com withouth dir change
 - bash _scripts/tests/nginx/nginx.sh
 - bash _scripts/tests/html/htmlproofer.sh
