--- a/Websites/fermiumlabs_com/_data/we.yml
+++ b/Websites/fermiumlabs_com/_data/we.yml
@@ -1,7 +1,7 @@
 - name: Davide Bortolami
   picture: "img/team-1.jpg"
   title: Fat Pirate
-  description: Does something with electric stuff
+  description: Does something with electric stuff and bla bla bla bla quite long text to see what happens there with longer texts
   
   
 - name: Simone Tosato
