--- a/Websites/fermiumlabs_com/_data/projects.yml
+++ b/Websites/fermiumlabs_com/_data/projects.yml
@@ -1,7 +1,7 @@
 - name:  Project 1
   project-page: "#"
   tw-tag: "#trump"
-  image: "img/projects/project1.JPG"
+  image: "Assets/img/projects/project1.JPG"
   slide: 1
   date:  23-04-2016
   tags:  ["tag1","tag2","tag3"]
@@ -27,7 +27,7 @@
 - name:  Project 2
   project-page: "#"
   tw-tag: "#trump"
-  image: "img/projects/project1.JPG"
+  image: "Assets/img/projects/project1.JPG"
   slide: 2
   date:  23-04-2016
   tags:  ["tag4","tag5","tag6"]
