plentiful fixations, enought to make Freud happy

--- a/Websites/fermiumlabs_com/_data/collaborators.yml
+++ b/Websites/fermiumlabs_com/_data/collaborators.yml
@@ -1,25 +1,25 @@
 - name: Davide Bortolami
-  picture: "img/team-1.jpg"
+  picture: "/Assets/img/team-1.jpg"
   title: Fat Pirate
   description: Does something with electric stuff
   
 - name: Davide Bortolami
-  picture: "img/team-1.jpg"
+  picture: "/Assets/img/team-1.jpg"
   title: Fat Pirate
   description: Does something with electric stuff
     
 - name: Davide Bortolami
-  picture: "img/team-1.jpg"
+  picture: "/Assets/img/team-1.jpg"
   title: Fat Pirate
   description: Does something with electric stuff
     
 - name: Davide Bortolami
-  picture: "img/team-1.jpg"
+  picture: "/Assets/img/team-1.jpg"
   title: Fat Pirate
   description: Does something with electric stuff
     
 - name: Davide Bortolami
-  picture: "img/team-1.jpg"
+  picture: "/Assets/img/team-1.jpg"
   title: Fat Pirate
   description: Does something with electric stuff
   
