--- a/Websites/fermiumlabs_com/_data/we.yml
+++ b/Websites/fermiumlabs_com/_data/we.yml
@@ -1,10 +1,10 @@
 - name: Davide Bortolami
-  picture: "img/team-1.jpg"
+  picture: "/Assets/img/team-1.jpg"
   title: Fat Pirate
   description: Does something with electric stuff and bla bla bla bla quite long text to see what happens there with longer texts
   
   
 - name: Simone Tosato
-  picture: "img/team-1.jpg"
+  picture: "/Assets/img/team-1.jpg"
   title: Other Guy
   description: Does different things
