--- a/Websites/fermiumlabs_com/package.json
+++ b/Websites/fermiumlabs_com/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/fermiumlabs/website#readme",
   "dependencies": {
+    "angular-morris-chart": "^1.2.0",
     "browser-sync": "^2.14.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
