--- a/Websites/fermiumlabs_com/package.json
+++ b/Websites/fermiumlabs_com/package.json
@@ -28,12 +28,10 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-imagemin": "^3.0.2",
-    "gulp-less": "^3.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
-    "imagemin-pngquant": "^5.0.0",
-    "path": "^0.12.7"
+    "imagemin-pngquant": "^5.0.0"
   }
 }
