varius fixes... seems to work reasonably

--- a/Websites/fermiumlabs_com/_config.yml
+++ b/Websites/fermiumlabs_com/_config.yml
@@ -25,5 +25,5 @@ exclude: ["_app",
           "package.json",
           "*.scss",
           "*.less"]
- # Don't forget that Jekyll automatically 
-x# excludes files with a dot prefix
+# Don't forget that Jekyll automatically 
+# excludes files with a dot prefix
