--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
-language: ruby
-rvm:
-- 2.2
+language: node_js
+node_js:
+  - "6.1"
 sudo: required
 before_install:
 - openssl aes-256-cbc -K $encrypted_fc456133d54b_key -iv $encrypted_fc456133d54b_iv
   -in .cfcli.yml.enc -out ~/.cfcli.yml -d
 - openssl aes-256-cbc -K $encrypted_0c41919e9cd0_key -iv $encrypted_0c41919e9cd0_iv
   -in deploy-key.enc -out deploy-key -d
+- gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
+- curl -sSL https://get.rvm.io | bash -s stable --ruby
 - eval `ssh-agent -s`
 - chmod 600 deploy-key && ssh-add deploy-key && rm deploy-key
 - bash _scripts/ssh_autenticity.sh
@@ -14,9 +16,6 @@ before_install:
 - sudo add-apt-repository -y ppa:nginx/development
 - sudo apt-get update
 - sudo apt-get -qq -y install nginx zip
-- sudo apt-get remove -qq -y nodejs
-- curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-- sudo apt-get install -qq -y nodejs
 - source ~/.bashrc
 - npm install npm -g
 - npm install -g npm-check-updates
