--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
 - sudo apt-get remove -qq -y nodejs
 - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
 - sudo apt-get install -qq -y nodejs
+- nvm install node
 - source ~/.bashrc
 - npm install npm -g
 - npm install -g npm-check-updates
