cleanup of testing stuff. Everything seems to work. I'm going to open a pull request now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
 - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
 - sudo apt-get install -qq -y nodejs
 - nvm install node
+- source ~/.bashrc
 - npm install npm -g
 # Tools
 - npm install -g cloudflare-cli
