update project description

--- a/Websites/fermiumlabs_com/_data/projects.yml
+++ b/Websites/fermiumlabs_com/_data/projects.yml
@@ -1,20 +1,26 @@
 - name:  Houston
-  project-page: "#"
-  tw-tag: "#trump"
+  project-page: "/contact-us"
+  tw-tag: "#pr-houston"
   image: "Assets/img/projects/mission-control-nasa-1.jpg"
   slide: 1
   date:  23-04-2016
   tags:  ["tag4","tag5","tag6"]
   state: aaa
   donut:
-    - label:  "aa"
-      value:  21
+    - label:  "Embedded Hardware"
+      value:  25
       color:
-    - label:  "aaa"
-      value:  59
-      color:
-    - label:  "aaa"
+    - label:  "System Engineering"
       value:  20
+      color:
+    - label:  "High performance \ndata-relay"
+      value:  10
+      color:
+    - label:  "Statistical \nProcessing SW"
+      value:  30
+      color:
+    - label:  "Frontend"
+      value:  15
       color:
   policies:
     - name:  "Market"
