--- a/Websites/fermiumlabs_com/_config.yml
+++ b/Websites/fermiumlabs_com/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Fermium LABS is an innovative startup in the Hearth of Italy.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://fermiumlabs.com" # the base hostname & protocol for your site
-twitter_username: fermiumlabs
+twitter_username: @fermiumlabs
 github_username:  fermiumlabs
 # Build settings
 markdown: kramdown
@@ -28,5 +28,5 @@ exclude: ["_app",
           "package.json",
           "*.scss",
           "*.less"]
-# Don't forget that Jekyll automatically 
+# Don't forget that Jekyll automatically
 # excludes files with a dot prefix
