Added gulp clean, uglyfication for js, build only changed files

--- a/Websites/fermiumlabs_com/_config.yml
+++ b/Websites/fermiumlabs_com/_config.yml
@@ -28,6 +28,7 @@ exclude: ["_app",
           "node_modules",
           "package.json",
           "*.scss",
-          "*.less"]
+          "*.less",
+          "*.js"]
 # Don't forget that Jekyll automatically
 # excludes files with a dot prefix
