--- a/Websites/fermiumlabs_com/package.json
+++ b/Websites/fermiumlabs_com/package.json
@@ -29,6 +29,8 @@
     "es6-promise": "^3.2.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-changed": "^1.3.1",
+    "gulp-clean": "^0.3.2",
     "gulp-jekyll": "0.0.0",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
@@ -39,6 +41,7 @@
     "gulp-uncss": "^1.0.6",
     "imagemin-pngquant": "^5.0.0",
     "path": "^0.12.7",
+    "pump": "^1.0.1",
     "uncss": "^0.14.1"
   }
 }
