--- a/Websites/fermiumlabs_com/package.json
+++ b/Websites/fermiumlabs_com/package.json
@@ -31,6 +31,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-changed": "^1.3.1",
     "gulp-clean": "^0.3.2",
+    "gulp-cssnano": "^2.1.2",
     "gulp-jekyll": "0.0.0",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
