--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 # Install latest nginx development
 - sudo add-apt-repository -y ppa:nginx/development
 - sudo apt-get update
-- sudo apt-get -qq -y install nginx zip
+- sudo apt-get -qq -y install nginx zip --force-yes
 # Install latest node.js
 - sudo apt-get remove -qq -y nodejs
 - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
