various optimization to gulp

--- a/Websites/fermiumlabs_com/_config.yml
+++ b/Websites/fermiumlabs_com/_config.yml
@@ -29,8 +29,7 @@ exclude: ["_app",
           "node_modules",
           "package.json",
           "*.scss",
-          "*.less",
-          "*.js"]
+          "*.less"]
 # Don't forget that Jekyll automatically
 # excludes files with a dot prefix
 
