small addition to home text

--- a/Websites/fermiumlabs_com/_data/projects.yml
+++ b/Websites/fermiumlabs_com/_data/projects.yml
@@ -12,7 +12,8 @@
   This is why we're building Houston.<br> <br>
   Houston is an integrated *hardware-software* solution. <br>
   Conceived for complex machinery systems and their environments: <br>
-  From small production lines to **entire** factories. <br>
+  From small production lines to **entire** factories. <br><br><br>
+  [Get in touch](/contact-us/) for more informations.
   "
   date:  23-04-2016
   tags:  ["tag4","tag5","tag6"]
