--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ before_install:
 - sudo apt-get install -qq -y nodejs
 - nvm install node
 - source ~/.bashrc
-#- npm install npm -g
-- npm install -g --verbose npm@2.14.20
+- nvm use node
+- npm install npm -g
 # Tools
 - npm install -g cloudflare-cli
 
