--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,13 @@ before_install:
 # Install latest nginx development
 - sudo add-apt-repository -y ppa:nginx/development
 - sudo apt-get update
-- sudo apt-get -qq -y install nginx zip --force-yes
+- sudo apt-get -qq -y install nginx zip g++-4.8 --force-yes  
 # Install latest node.js
 - sudo apt-get remove -qq -y nodejs
 - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
 - sudo apt-get install -qq -y nodejs
 - nvm install node
 - source ~/.bashrc
-- nvm use node
 - npm install npm -g
 # Tools
 - npm install -g cloudflare-cli
@@ -78,3 +77,4 @@ notifications:
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+  - CXX=g++-4.8
