--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_install:
 # Install latest nginx development
 - sudo add-apt-repository -y ppa:nginx/development
 - sudo apt-get update
-- sudo apt-get -qq -y install nginx zip g++-4.8 --force-yes  
+- sudo apt-get -qq -y install nginx zip  --force-yes  
+- sudo apt-get -qq -y g++-4.8
 # Install latest node.js
 - sudo apt-get remove -qq -y nodejs
 - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
