--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 rvm:
 - 2.2
 sudo: required
+dist: trusty
 before_install:
 # Decrypt important files
 - openssl aes-256-cbc -K $encrypted_fc456133d54b_key -iv $encrypted_fc456133d54b_iv
@@ -18,7 +19,6 @@ before_install:
 - sudo add-apt-repository -y ppa:nginx/development
 - sudo apt-get update
 - sudo apt-get -qq -y install nginx zip  --force-yes  
-- sudo apt-get -qq -y install g++-4.8
 # Install latest node.js
 - sudo apt-get remove -qq -y nodejs
 - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
