--- a/Websites/fermiumlabs_com/package.json
+++ b/Websites/fermiumlabs_com/package.json
@@ -21,7 +21,9 @@
     "browser-sync": "^2.14.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "bower": "^1.5.2"
+}
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
