--- a/Websites/fermiumlabs_com/package.json
+++ b/Websites/fermiumlabs_com/package.json
@@ -1,31 +1,27 @@
 {
   "name": "website",
   "version": "1.0.0",
-  "description": "FermiumLABS website dependencies",
+  "description": "FermiumLABS website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "gulp --"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fermiumlabs/website.git"
   },
-  "author": "",
+  "author": "Fermium LABS srl",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/fermiumlabs/website/issues"
   },
   "homepage": "https://github.com/fermiumlabs/website#readme",
   "dependencies": {
-    "angular-morris-chart": "^1.2.0",
-    "browser-sync": "^2.14.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-sass": "^2.3.2",
-    "bower": "^1.5.2"
+    "angular-morris-chart": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
+    "bower": "^1.5.2",
     "browser-sync": "^2.14.0",
     "es6-promise": "^3.2.1",
     "gulp": "^3.9.1",
@@ -40,6 +36,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-shell": "^0.5.2",
     "gulp-uglify": "^2.0.0",
     "gulp-uncss": "^1.0.6",
     "gulp-webserver": "^0.9.1",
