--- a/.travis.yml
+++ b/.travis.yml
@@ -47,14 +47,17 @@ deploy:
 deploy:
   - provider: script
     script: _scripts/deploy.sh
+    skip_cleanup: true
     on:
       branch: master
   - provider: script
     script: _scripts/deploy_config.sh
+    skip_cleanup: true
     on:
       branch: master
   - provider: script
     script: _scripts/deploy.sh
+    skip_cleanup: true
     on:
       branch: develop
 
