--- a/Websites/fermiumlabs_com/_data/projects.yml
+++ b/Websites/fermiumlabs_com/_data/projects.yml
@@ -1,6 +1,6 @@
 - name:  Houston
   subtitle: "Factory mission control"
-  project-page: "/houston/"
+  project-page: "/products/houston/"
   tw-tag: "#pr-houston"
   image: "Assets/img/projects/houston.jpg"
   slide: 1
