--- a/Websites/fermiumlabs_com/_data/houston.yml
+++ b/Websites/fermiumlabs_com/_data/houston.yml
@@ -13,7 +13,7 @@ content :
     body  : "Super cool features to make people think we're actually doing something"
     blocks :
       - icon  : "ti-mouse"
-        title : "Trial-and-error to the extreme"
+        title : "Trial-and-Error"
         body  : |
           To interface with machinery, write your code and test it on-the-fly. Make mistakes and retry as quickly and efficiently as possible.
       - icon  : "ti-mouse"
@@ -24,6 +24,12 @@ content :
         title : "Globally available"
         body  : |
           Houston data ingest points are completely redundant and available from the EU, US and Asia.
+
+      - icon  : "ti-mouse"
+        title : "Safe"
+        body  : |
+          The data you send follows a strict chain of custody. It's always redundantly written after it exits your factory.
+
   long-description :
     title : "Python at heart"
     body  : |
@@ -38,22 +44,51 @@ content :
 
       {:.lead}
       some more random text to check if classes are working
+      
   protocols :
     title : "Our super cool features"
     body  : "Super cool features to make people think we're actually doing something"
     blocks :
-      - logo  : "/Assets/img/logos/atom.svg"
-        name  : "fermiumlabs"
+      - logo  : "/products/houston_img/protocols/modbus.jpg"
+        name  : "Modbus"
         description  : |
-          To interface with machinery, write your code and test it on-the-fly. Make mistakes and retry as quickly and efficiently as possible.
-      - logo  : "/Assets/img/logos/atom.svg"
-        name  : "fermiumlabs"
+          Modbus may be the most important industrial comunication protocol, in particular for it's capability to read registers from legacy PLCs that do not support OPC-UA.
+          
+          Houston supports the following ModBus variants:
+            
+            {:.bullet-list}  
+            {:.padding-fix}          
+            * Modbus over TCP 
+            * Modbus over UDP 
+            * Modbus over Serial
+            
+              {:.bullet-list}
+              * ASCII (for legacy applications)
+              * RTU
+              * Binary
+              
+
+      - logo  : "/products/houston_img/protocols/opc-ua.png"
+        name  : "OPC-UA"
         description  : |
-          Houston's devices can be controlled only from your local network. You don't need to trust us.
-      - logo  : "/Assets/img/logos/atom.svg"
-        name  : "fermiumlabs"
+        
+          [OPC-UA](https://en.wikipedia.org/wiki/OPC_Unified_Architecture) [IEC 62541](https://webstore.iec.ch/publication/21987) is the leading standard in industrial automation.
+          
+          OPC-UA fixes the drawbacks of its long-live predecessor, OPC. It's more secure, cross platform and scalable.
+          
+          Houston Device include full native support for the OPC-UA protocol.
+          
+      - logo  : ""
+        name  : "serial"
         description  : |
-          Houston data ingest points are completely redundant and available from the EU, US and Asia.
+          Houston devices supports any common serial hardware protocol such as:
+            
+            * [RS232](https://en.wikipedia.org/wiki/RS-232)
+            * [RS485](https://en.wikipedia.org/wiki/RS-485)
+            * [RS422](https://en.wikipedia.org/wiki/RS-422)
+            * [UART](https://en.wikipedia.org/wiki/Universal_asynchronous_receiver/transmitter)
+          
+          
       - logo  : "/Assets/img/logos/atom.svg"
         name  : "fermiumlabs"
         description  : |
